test/must_fail/api/must_fail_ngspice_data.ref
error: ngspice_data() require exactly 0 arguments but 1 was given
  [must_fail_ngspice_data.ngjs:0:0] in <anonymous>()
    Internal.ngspice_data(123);
             ^

hint: function 'ngspice_data()' was called with 1 arguments
hint: argument #0 was 123 (number)

Stack trace (1 frames):
  [must_fail_ngspice_data.ngjs:0:0] in <anonymous>()
    Internal.ngspice_data(123);
             ^

exit(7)
