test/must_fail/api/must_fail_ngspice_data.ngjs
#!/usr/bin/env ngspicejs
// data needs no arg
// linter: ngspicejs-lint
"use strict";

Internal.ngspice_data(123);
